fixed text-align center for Jquery and title

--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -70,6 +70,7 @@ body {
 	width:100%;
 	top: 280px;
 	position:relative;
+	text-align:center;
 	background-color:rgba(7, 7, 8, 0.74);
 		
 }
